--- a/inplace-demo/inplace-restart.yaml
+++ b/inplace-demo/inplace-restart.yaml
@@ -15,13 +15,42 @@ spec:
             shareProcessNamespace: true
             containers:
             - name: main
-              image: perl:5.34.0
-              command: [ "/bin/bash", "-c", "--" ]
-              args: [ "while true; do echo '.'; sleep 60; done;" ]
+              image: us-central1-docker.pkg.dev/imreddy-gke-dev/restart-agent/restart-image:latest
+              env:
+              - name: POD_NAME
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.name
+              securityContext:
+                  runAsUser: 0
+                  allowPrivilegeEscalation: false
+                  capabilities:
+                    add:
+                    - NET_BIND_SERVICE
+              volumeMounts:
+                - name: cri-sock-volume
+                  mountPath: /run/cri.sock
+                  readOnly: true
+                - name: containerd-sock-volume
+                  mountPath: /run/containerd/containerd.sock
+                  readOnly: true
+              command:
+              - bash
+              - -xc
+              - |
+                python3 /app/restart-handler.py
             initContainers:
             - name: wrapper
               image: perl:5.34.0
               restartPolicy: Always
               command: ["/bin/sh"]
-              args: ["-c", "echo 'w';sleep 60s;exit 1"]
+              args: ["-c", "echo 'w';sleep 60s"]
             restartPolicy: Never
+            volumes:
+            - name: cri-sock-volume
+              hostPath:
+                path: /run/containerd/containerd.sock
+                type: Socket
+            - name: containerd-sock-volume
+              hostPath:
+                path: /run/containerd/containerd.sock
